@@ -4,8 +4,9 @@
 
 - added Path of the Elements subclass
 - added Verdant Touched feats
-- fixed Grenadier spell attack bonus
-- fixed Sanctuary spell to not require concentration
+- fixed Grenadier precise bombs attack bonus
+- fixed Sanctuary spell concentration requirement
+- fixed Slayer's fatal strike damage calculation
 - improved Crusher feat gui presentation
 - improved Deadeye to work with launcher and darts
 - improved Path of the Spirits' wolf leadership aura
