@@ -1,7 +1,7 @@
 {
   "Id": "SolastaUnfinishedBusiness",
   "DisplayName": "Unfinished Business [UB1]",
-  "Version": "1.4.33.67",
+  "Version": "1.4.33.68",
   "GameVersion": "1.4.33",
   "ManagerVersion": "0.24.0",
   "AssemblyName": "SolastaUnfinishedBusiness.dll",
